# RateWalk

./: .env.example  .gitignore  DESIGN.md  README.md  pyproject.toml
.github/workflows/: tests.yml
config/: default.yaml
notebooks/: RateWalk-research.ipynb  _build.py
paper/: ratewalk.tex
scripts/: make_market_figures.py
src/ratewalk/: __init__.py  cli.py  config.py  obs.py
src/ratewalk/analytics/: __init__.py  risk.py
src/ratewalk/api/: __init__.py  server.py
src/ratewalk/credit/: __init__.py  overlay.py
src/ratewalk/curve/: __init__.py  model.py
src/ratewalk/data/: __init__.py  sources.py
src/ratewalk/hedge/: __init__.py  agents.py
src/ratewalk/horizon/: __init__.py  policy.py
src/ratewalk/instruments/: __init__.py  bond.py  book.py
src/ratewalk/markov/: __init__.py  diagnostics.py  estimate.py
src/ratewalk/sim/: __init__.py  engine.py  jumps.py
src/ratewalk/states/: __init__.py  discretize.py
src/ratewalk/vol/: __init__.py  allocation.py
src/ratewalk/walkforward/: __init__.py  backtest.py  forecast.py  market_benchmark.py
tests/: test_analytics_credit.py  test_market_benchmark.py  test_markov.py  test_no_lookahead.py  test_pipeline.py  test_sim.py  test_walkforward.py
