[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ratewalk"
version = "0.1.0"
description = "Markov-driven Monte Carlo engine for fixed-income path simulation, risk, and hedging."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.27"]
dev = ["pytest>=7.0"]
notebook = ["jupyter", "nbconvert", "matplotlib>=3.7"]

[project.scripts]
ratewalk = "ratewalk.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
